# amore

./: .cargo-mutants.toml  .dockerignore  .gitignore  .gitleaks.toml  .semgrep.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile.builder-linux-x86_64  Dockerfile.multiarch  NOTICE  README.md  ROADMAP.md  SECURITY.md  UPGRADING.md  allowed_signers  deny.toml  docker-compose.eval.yml  sbom.cdx.json  sha256sums.txt  sha256sums.txt.sig
.cargo/: config.toml  (+1 more)
crates/adapter-cursor/: Cargo.toml
crates/adapter-cursor/src/: lib.rs
crates/adapter-hermes/: Cargo.toml
crates/adapter-hermes/src/: lib.rs
crates/amore-adapter-cursor/: Cargo.toml
crates/amore-adapter-cursor/src/: lib.rs
crates/amore-adapter-hermes/: Cargo.toml
crates/amore-adapter-hermes/src/: lib.rs
crates/amore-cli/: Cargo.toml
crates/amore-cli/src/: data.rs  main.rs  secrets.rs  update.rs
crates/amore-cli/src/commands/: flags.rs
crates/amore-cli/tests/: init_on_disk_matrix.rs  secrets.rs
crates/amore-core/: Cargo.toml
crates/amore-core/fuzz/: Cargo.toml
crates/amore-core/src/: cache.rs  circuit_breaker.rs  compaction.rs  diag.rs  docs.rs  ensemble.rs  flags.rs  http.rs  ide_adapter.rs  lib.rs  mining.rs  ollama.rs  porter1.rs  qdrant_pool.rs  qdrant_store.rs  recall.rs  reranker.rs  sqlite_compaction.rs  sqlite_store.rs  streaming_ingest.rs  tantivy_index.rs  timeout.rs  wal.rs  world_model.rs
crates/amore-core/tests/: bm25_fts5_baseline.rs  cache_hit_ratio.rs  circuit_breaker.rs  compaction_smoke.rs  concurrency_writes.rs  ensemble_real_ollama.rs  flags.rs  hybrid_e2e.rs  mining_real_ledger.rs  ollama_embed.rs  prop_canonical_doc.rs  prop_provenance.rs  prop_recall.rs  qdrant_pool_smoke.rs  qdrant_roundtrip.rs  recall_degraded.rs  reranker_parity.rs  rrf_fusion_baseline.rs  tantivy_parity.rs  wal_replay.rs  world_model_persist.rs
crates/amore-eval/: Cargo.toml
crates/amore-eval/fixtures/: adversarial-mining-ledger-parse.json  amore-apache-license-attribution.json  amore-changelog-semver-breaking.json  amore-cross-ide-install-windows.json  amore-doctor.json  amore-install.json  amore-mcp-tools-list.json  amore-overview.json  backup-stack-hasleo-image.json  backup-stack-kopia-snapshot.json  backup-stack-veeam-migration.json  chain-fork-begin-immediate-concurrent.json  clap-derive-subcommand-init-recall.json  concurrency-chain-fork-bug.json  concurrency-fts5.json  concurrency-multi-process-mcp-server.json  concurrency-wal.json  cosign-verify-blob-release-artifact.json  cross-ide-adapter-mcp-protocol.json  docs-router-stable-true-canonical.json  ensemble-agent-vote-orchestrator.json  hasleo-usb-plugin-image-backup.json  ide-adapter-atomic-write-bak.json  kopia-snapshot-restore-canary.json  mcp-server-rmcp-tool-router-handler.json  multi-agent-ensemble-research-comparison.json  npm-postinstall-private-repo-github-token.json  ollama-unavailable-degraded-envelope.json  portable-agent-memory-provenance-spec.json  provenance-sha256-chain-envelope.json  qdrant-unreachable-connection-refused.json  qdrant-vector-upsert-search.json  recall-rrf-bm25-fusion.json  rust-async-fn-trait-embedder.json  sigstore-cosign-keyless-oidc-release.json  sqlite-wal-fts5-bm25-search.json  timeout-amore-ms-env-cap.json  vector-nomic-embed-text-768-dimensions.json  windows-home-dir-userprofile-expand.json  world-model-bayesian-laplace-preferences.json  (+1 more)
crates/amore-eval/src/: main.rs
crates/amore-gui/: Cargo.toml
crates/amore-gui/src/: ide_detect.rs  ide_wire.rs  install.rs  lib.rs  main.rs  tray.rs
crates/amore-gui/tests/: ide_detect_tests.rs  ide_wire_tests.rs  wizard_state_tests.rs
crates/amore-i18n/: Cargo.toml
crates/amore-i18n/src/: lib.rs
crates/amore-i18n/tests/: locale_load.rs
crates/amore-integration-tests/: Cargo.toml
crates/amore-integration-tests/tests/: auto_wire_headless.rs  cli_help.rs  init_dry_run.rs  mcp_handshake.rs  qdrant_storage_writable.rs  working_product_docker.rs
crates/amore-launcher/: Cargo.toml
crates/amore-launcher/src-tauri/: Cargo.toml  build.rs  products.json  tauri.conf.json
crates/amore-launcher/ui/: index.html
crates/amore-mcp/: Cargo.toml  build.rs
crates/amore-mcp/src/: grpc.rs  main.rs  register.rs  shutdown.rs
crates/amore-mcp/tests/: grpc_smoke.rs  health_http.rs  mcp_handshake.rs  rate_limit.rs  shutdown.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: init_on_disk_matrix.rs
crates/eval/: Cargo.toml
crates/eval/fixtures/: adversarial-mining-ledger-parse.json  bitwarden-kopia-dpapi-backup-key.json  chain-fork-begin-immediate-concurrent.json  clap-derive-subcommand-init-recall.json  concurrency-chain-fork-bug.json  concurrency-fts5.json  concurrency-multi-process-mcp-server.json  concurrency-wal.json  cosign-verify-blob-release-artifact.json  cross-ide-adapter-mcp-protocol.json  docs-router-stable-true-canonical.json  ensemble-agent-vote-orchestrator.json  ide-adapter-atomic-write-bak.json  mcp-server-rmcp-tool-router-handler.json  multi-agent-ensemble-research-comparison.json  npm-postinstall-private-repo-github-token.json  obelion-apache-license-attribution.json  obelion-changelog-semver-breaking.json  obelion-cross-ide-install-windows.json  obelion-doctor.json  obelion-install.json  obelion-mcp-tools-list.json  obelion-overview.json  ollama-unavailable-degraded-envelope.json  portable-agent-memory-provenance-spec.json  provenance-sha256-chain-envelope.json  qdrant-unreachable-connection-refused.json  qdrant-vector-upsert-search.json  recall-rrf-bm25-fusion.json  rust-async-fn-trait-embedder.json  sqlite-wal-fts5-bm25-search.json  timeout-obelion-ms-env-cap.json  vector-nomic-embed-text-768-dimensions.json  veeam-exfat-rejected-alternative.json  windows-home-dir-userprofile-expand.json  world-model-bayesian-laplace-preferences.json  world-model-graph-projects-tools.json
crates/eval/src/: main.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: main.rs
crates/mcp-server/tests/: mcp_handshake.rs
python/amore/: README.md  pyproject.toml
python/amore/tests/: test_memory.py
(+264 files in other folders)
