[workspace]
resolver = "2"
members = [
    "crates/amore-core",
    "crates/amore-mcp",
    "crates/amore-cli",
    "crates/amore-adapter-claude",
    "crates/amore-adapter-cursor",
    "crates/amore-adapter-codex",
    "crates/amore-adapter-cline",
    "crates/amore-adapter-opencode",
    "crates/amore-adapter-windsurf",
    "crates/amore-adapter-hermes",
    "crates/amore-eval",
    "crates/amore-gui",
    "crates/amore-integration-tests",
]

[workspace.package]
version = "0.4.0"
authors = ["Antonio <antonioakiki15@gmail.com>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/antonio-amore-akiki/amore"
rust-version = "1.95"

[workspace.dependencies]
# MCP — official Anthropic SDK
rmcp = { version = "1.7", features = ["server", "macros", "transport-io"] }

# Vector store — Qdrant (production scale)
qdrant-client = "1.15"

# LLM + embeddings — Ollama (free unlimited local)
ollama-rs = "0.3"

# Metadata + BM25 — SQLite with bundled FTS5
rusqlite = { version = "0.39", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto provenance (canonical-JSON + sha256 envelopes)
sha2 = "0.10"
hex = "0.4"
canonical_json = "0.7"

# HTTP client (Ollama, Qdrant fallback)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Connection pooling (H.4 Qdrant gRPC pool)
bb8 = "0.8"

# Async trait support for bb8::ManageConnection impl (H.4)
async-trait = "0.1"

# gRPC transport (Phase H.6 — ADR 0009)
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
tonic-build = "0.12"

# Snapshot archive (tar + flate2 already transitive; tar needs explicit dep)
tar = "0.4"

# CLI argument parsing (subcommands: init / serve / recall / status)
clap = { version = "4", features = ["derive"] }

# Cross-platform user-home / config-dir resolution
dirs = "5"

# TOML — required for Codex CLI adapter (~/.codex/config.toml)
toml = "0.8"

# YAML — required for Hermes Agent adapter (~/.hermes/config.yaml)
serde_yaml = "0.9"

# Property-based testing (dev only)
proptest = "1.5"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
