[package]
name = "obelion-adapter-cursor"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
obelion-core = { path = "../core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
