[package]
name = "amore-adapter-cursor"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
amore-core = { path = "../amore-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
