[package]
name = "amore-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Amore core — local-first hybrid retrieval (BM25 + vector) engine, WAL, qdrant adapter, machine-key keyring for the Amore MCP agent memory backbone."
keywords = ["mcp", "agent-memory", "retrieval-augmented-generation", "rust"]
categories = ["development-tools"]

[features]
default = ["rerank-onnx", "tantivy-bm25", "compaction-worker", "wal-sync", "metrics-exporter"]
rerank-onnx = ["dep:ort", "dep:tokenizers"]
tantivy-bm25 = ["dep:tantivy"]
compaction-worker = []
wal-sync = []
metrics-exporter = []

[dependencies]
qdrant-client.workspace = true
ollama-rs.workspace = true
rusqlite.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
sha2.workspace = true
hmac.workspace = true
hex.workspace = true
canonical_json.workspace = true
rand.workspace = true
keyring.workspace = true
metrics.workspace = true
reqwest.workspace = true
bb8.workspace = true
async-trait.workspace = true
tar.workspace = true
flate2 = "1.0"
tantivy = { workspace = true, optional = true }
sled.workspace = true
moka.workspace = true
ort = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
dirs.workspace = true
crash-handler = "0.7"
minidumper = "0.10"

[dev-dependencies]
proptest.workspace = true
tempfile = "3"
tokio.workspace = true
serde_json.workspace = true
