[package]
name = "amore-eval"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "token-reduction"
path = "src/main.rs"

[[bin]]
name = "seed_load_test_corpus"
path = "src/bin/seed_load_test_corpus.rs"

[[bin]]
name = "amore-eval-benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "amore-eval-longmemeval"
path = "src/bin/longmemeval_runner.rs"

[dependencies]
amore-core = { path = "../amore-core" }

# H.10 corpus seeder deps (all workspace — no new external deps)
qdrant-client.workspace = true
rusqlite.workspace = true
tokio.workspace = true

# Real tokenizer — cl100k_base BPE (GPT-4 + Anthropic-aligned token counter).
# Anthropic does not publish their tokenizer publicly; cl100k_base is the de
# facto industry-standard reference for measuring agent context tokens.
# Default features include the encoding data baked into the crate via
# include_str!, so no network access is required at runtime.
tiktoken-rs = "0.11"

# Filesystem walker for fixture discovery
walkdir = "2"

# Wall-clock timestamp formatting for results.tsv rows
time = { version = "0.3", features = ["formatting", "macros"] }

serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Latency histogram for p50/p95/p99/p99.9 percentile reporting (benchmark.rs)
hdrhistogram = "7"

# Cross-platform user data directory resolution (benchmark.rs, longmemeval_runner.rs)
dirs.workspace = true
