[package]
name = "amore-gui"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "amore-gui"
path = "src/main.rs"

[dependencies]
# Native window + immediate-mode GUI (no Chromium, ~5-8 MB stripped binary).
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
# Native folder picker for the "Browse..." button.
rfd = "0.15"
# PATH lookup for Ollama auto-detect.
which = "7"
# Cross-platform default data directory (used by default_memory_dir()).
dirs.workspace = true
# HTTP client for F.installer-3 (Ollama silent download + readiness probe).
# Workspace base has [default-features=false, json, rustls-tls]; we add "blocking"
# so the worker thread can do synchronous chunked download without a tokio runtime.
reqwest = { workspace = true, features = ["blocking"] }
# JSON serialisation for --no-gui CI smoke output.
serde_json = { workspace = true }
# SHA-256 integrity check for the downloaded Ollama installer (security finding 10a).
sha2 = { workspace = true }
hex = { workspace = true }
