[package]
name = "amore-integration-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
# This crate has no library — it is purely integration test targets.
publish = false

[[test]]
name = "cli_help"
path = "tests/cli_help.rs"

[[test]]
name = "mcp_handshake"
path = "tests/mcp_handshake.rs"

[[test]]
name = "init_dry_run"
path = "tests/init_dry_run.rs"

[[test]]
name = "working_product_docker"
path = "tests/working_product_docker.rs"

[[test]]
name = "auto_wire_headless"
path = "tests/auto_wire_headless.rs"

[[test]]
name = "qdrant_storage_writable"
path = "tests/qdrant_storage_writable.rs"

[dependencies]

[dev-dependencies]
amore-core = { path = "../amore-core" }
serde_json = { workspace = true }
tempfile = "3"
