[package]
name = "amore-launcher"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Amore launcher — discover + install Antonio's products from one app"
keywords = ["tauri", "launcher", "mcp", "amore", "desktop"]
categories = ["gui"]

[[bin]]
name = "amore-launcher"
path = "src-tauri/src/main.rs"
