[package]
name = "obelion-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "obelion"
path = "src/main.rs"

[dependencies]
obelion-core = { path = "../core" }
obelion-adapter-claude = { path = "../adapter-claude" }
obelion-adapter-cursor = { path = "../adapter-cursor" }
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

