[package]
name = "obelion-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "obelion"
path = "src/main.rs"

[dependencies]
obelion-core = { path = "../core" }
obelion-adapter-claude = { path = "../adapter-claude" }
obelion-adapter-cursor = { path = "../adapter-cursor" }
obelion-adapter-codex = { path = "../adapter-codex" }
obelion-adapter-cline = { path = "../adapter-cline" }
obelion-adapter-opencode = { path = "../adapter-opencode" }
obelion-adapter-windsurf = { path = "../adapter-windsurf" }
obelion-adapter-hermes = { path = "../adapter-hermes" }
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

