[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amore"
version = "1.0.2"
description = "Python client for Amore agent memory — mem0-compatible API, Rust core via MCP"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "Antonio", email = "antonioakiki15@gmail.com" }]
keywords = ["mcp", "agent-memory", "rag", "mem0", "claude", "cursor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/antonio-amore-akiki/amore"
Repository = "https://github.com/antonio-amore-akiki/amore"
Issues = "https://github.com/antonio-amore-akiki/amore/issues"

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "README.md"]

[tool.hatch.build.targets.wheel]
packages = ["src/amore"]
