[package]
name = "amore-core-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"

[dependencies.amore-core]
path = ".."
default-features = false
# Only enable the lightweight feature flags needed by the fuzz targets.
# rerank-onnx (ort + tokenizers -> esaxx-rs) and tantivy-bm25 (tantivy) are
# excluded because esaxx-rs links MT (static CRT) which conflicts with
# libFuzzer's MD (dynamic CRT) on Windows MSVC, causing LNK2038.
features = []

[[bin]]
name = "canonical_json"
path = "fuzz_targets/canonical_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mcp_protocol"
path = "fuzz_targets/mcp_protocol.rs"
test = false
doc = false
bench = false
