[package]
name = "amore-launcher-tauri"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Amore launcher — Tauri 2 backend"

[[bin]]
name = "amore-launcher"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
