[package]
name = "amore-launcher"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Amore launcher — Tauri 2 desktop app discovering + installing Antonio's products from one place."
build = "build.rs"

[[bin]]
name = "amore-launcher"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# NB: profile.release lives at the workspace root (per cargo workspace rules);
# don't redeclare here or cargo refuses with "manifest has no targets" wrappers.
